<resources>
    <string name="app_name">Blood Friend</string>
    <string name="entrar">ENTRAR</string>
    <string name="cadastrar">CADASTRAR-SE</string>
    <string name="cadastro">CADASTRE-SE AQUI</string>
    <string name="logar_google">SIGN IN</string>
    <string name="blood_friend">BLOOD FRIEND</string>
    <string name="ajuda">Precisa de ajuda? Contate-nos</string>

    <string-array name="generos">
        <item>GÊNERO</item>
        <item>Feminino</item>
        <item>Masculino</item>
        <item>Prefiro não dizer</item>
    </string-array>

    <string-array name="tipo_sanguineo">
        <item>TIPO SANGUE</item>
        <item>A+         </item>
        <item>A-         </item>
        <item>B+         </item>
        <item>B-         </item>
        <item>AB+        </item>
        <item>AB-        </item>
        <item>O+         </item>
        <item>O-         </item>
    </string-array>

    <string-array name="localizacao">
        <item>LOCALIZAÇÃO</item>
        <item>Asa Norte  </item>
        <item>Asa Sul    </item>
        <item>Sobradinho </item>
        <item>Guará      </item>
        <item>Ceilândia  </item>
        <item>Gama       </item>
        <item>Lago Sul   </item>
        <item>Lago Norte </item>
        <item>Samambaia  </item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_chat">enviar</string>
    <string name="mensagem">Digite a mensagem</string>
    <string name="conversar">conversar</string>
    <string name="editar_perfil">EDITAR PERFIL</string>
    <string name="doador">DOADOR</string>
    <string name="receptor">RECEPTOR</string>
    <string name="esquecersenha">Esqueci minha senha</string>
</resources>